<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <FrameLayout
        android:id="@+id/flVideoContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- 美颜控制 View（底部） -->
    <cn.shengwang.beauty.ui.ShengwangBeautyView
        android:id="@+id/beautyControlView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/llControlBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvBeauty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableTop="@drawable/ic_beauty"
            android:drawablePadding="3dp"
            android:focusable="true"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/beauty_button_text"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvSwitchCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableTop="@drawable/ic_camera"
            android:drawablePadding="3dp"
            android:focusable="true"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/switch_camera_button_text"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvSaveBeauty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableTop="@drawable/ic_save"
            android:drawablePadding="3dp"
            android:focusable="true"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/save_beauty_config"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvResetBeauty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableTop="@drawable/ic_save"
            android:drawablePadding="3dp"
            android:focusable="true"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/reset_beauty_config"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="12dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
